--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-annotated-types==0.6.0
-anyio==3.7.1
-click==8.1.7
-exceptiongroup==1.2.0
-fastapi==0.105.0
-h11==0.14.0
-httptools==0.6.1
-idna==3.6
-pydantic==2.5.2
-pydantic-core==2.14.5
-python-dotenv==1.0.0
-PyYAML==6.0.1
-sniffio==1.3.0
-starlette==0.27.0
-typing-extensions==4.9.0
-uvicorn==0.24.0.post1
-uvloop==0.19.0
-watchfiles==0.21.0
-websockets==12.0
+appdirs==1.4.4
+certifi==2020.6.20
+charset-normalizer==3.0.1
+click==7.1.2
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.1.2
+idna==3.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.22.4
+pandas==1.4.2
+pipenv==2020.6.2
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.28.2
+six==1.15.0
+urllib3==1.26.14
+virtualenv==20.0.27
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
